--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^8.0.1",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-anchor-link-smooth-scroll-v2": "^2.0.1",
+    "react-dom": "18.2.0",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
