--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "contentful": "^9.2.14",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^8.0.1",
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll-v2": "^2.0.1",
     "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
